Fix public speaker list
